# WORC

./: .coverage  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  APACHE-LICENSE-2.0  CHANGELOG  CITATION.cff  CONTRIBUTORS  Install_ITK.md  LICENSE  MANIFEST.in  README.md  README.rst  example.py  extra_requirements_smac.txt  install_ITK.sh  installation.sh  pyproject.toml  readthedocs.yml  requirements-pre.txt  requirements-setup.txt  requirements.txt  setup.cfg  setup.py  test.py  test_requirements.txt  vanilla_script.py  version
.eggs/: PREDICT-2.1.0-py2.7.egg  PREDICT-2.1.2-py2.7.egg  docopt-0.6.2-py3.7.egg  drmaa-0.7.7-py2.7.egg  jmespath-0.9.3-py2.7.egg  phasepack-1.5-py2.7.egg  pymongo-3.7.1-py2.7-linux-x86_64.egg  s3transfer-0.1.13-py2.7.egg
.eggs/PyWavelets-1.0.0-py3.7-linux-x86_64.egg/EGG-INFO/: PKG-INFO  RECORD
.eggs/PyWavelets-1.0.0-py3.7-linux-x86_64.egg/pywt/: version.py
.eggs/boto3-1.7.75-py2.7.egg/EGG-INFO/: PKG-INFO  requires.txt
.eggs/boto3-1.8.8-py2.7.egg/EGG-INFO/: PKG-INFO  requires.txt
.eggs/botocore-1.10.75-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  requires.txt
.eggs/botocore-1.11.8-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  requires.txt
.eggs/dicom-0.9.9.post1-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt
.eggs/dicom-0.9.9.post1-py2.7.egg/dicom/: UID.py  _UID_dict.py  __init__.py  _dicom_dict.py  _private_dict.py  charset.py  config.py  datadict.py  dataelem.py  dataset.py  dicomdir.py  encaps.py  errors.py  filebase.py  filereader.py  fileutil.py  filewriter.py  misc.py  multival.py  sequence.py  tag.py  tagtools.py  valuerep.py  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: unit_test.yml
WORC/: WORC.py  WORCpy27.py  __init__.py  addexceptions.py  index.rst
WORC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
WORC/IOparser/: config.ini  config_WORC.py  config_io_PyRadiomics.py  config_io_classifier.py  config_io_combat.py  config_preprocessing.py  config_segmentix.py  file_io.py
WORC/classification/: AdvancedSampler.py  ObjectSampler.py  RankedSVM.py  SearchCV.py  __init__.py  construct_SMAC_configuration.py  construct_classifier.py  createfixedsplits.py  crossval.py  estimators.py  fitandscore.py  metrics.py  parameter_optimization.py  regressors.py  smac.py  trainclassifier.py  utils.py
WORC/detectors/: detectors.py
WORC/doc/: conf.py  doc_clean.py  doc_generate.py  doc_requirements.txt  generate_cmd.py  generate_config.py  generate_modules.py  generate_plugins.py  index.rst  index.template  make.bat  requirements-doc-predict.txt  requirements-pre-numpy.txt  requirements.txt
WORC/exampledata/: ComBatConfig.ini  ComBatConfig_matlab.ini  ComBatConfig_python.ini  ParametersRigid.txt  create_example_data.py  datadownloader.py  objectlabels.csv  posteriors.csv
WORC/export/: hyper_params_exporter.py
WORC/facade/: __init__.py  basicworc.py  simpleworc.py
WORC/fastrconfig/: WORC_config.py  __init__.py
WORC/featureprocessing/: ComBat.py  Decomposition.py  FeatureConverter.py  ICCThreshold.py  Imputer.py  OneHotEncoderWrapper.py  Preprocessor.py  Relief.py  Scalers.py  SelectGroups.py  SelectIndividuals.py  StatisticalTestFeatures.py  StatisticalTestThreshold.py  VarianceThreshold.py  combat_input.m  combatmatlab.m
WORC/plotting/: __init__.py  compute_CI.py  plot_ROC.py  plot_SHAP_values.py  plot_SVM.py  plot_barchart.py  plot_boxplot_features.py  plot_boxplot_performance.py  plot_errors.py  plot_estimator_performance.py  plot_hyperparameters.py  plot_images.py  plot_pvalues_features.py  plot_ranked_scores.py  plotminmaxresponse.py  scatterplot.py
WORC/processing/: ExtractNLargestBlobsn.py  RTStructReader.py  classes.py  helpers.py  label_processing.py  preprocessing.py  segmentix.py  segstatistics.py  xnattocsv.py
WORC/statistics/: __init__.py  crossvalstats.py  delong.py
WORC/tests/: WORCTutorialSimple_travis_multiclass.py  WORCTutorialSimple_travis_regression.py  WORCTutorialSimple_unittest_multiclass.py  WORCTutorialSimple_unittest_regression.py  combat_input.m  test_RSEnsemble.py  test_combat.py  test_helpers.py  test_iccthreshold.py  test_plot_errors.py  test_preprocessing.py  test_validators.py
WORC/tools/: Elastix.py  Evaluate.py  Inference.py  Slicer.py  Transformix.py  createfixedsplits.py  fingerprinting.py
WORC/validators/: __init__.py  abstractvalidator.py  preflightcheck.py
docs/: Makefile  WORC.IOparser.rst  WORC.processing.rst  WORC.tools.rst  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst
tests/: tests.py  unit_test.py
tests/Data/: pinfo_HN.csv
(+455 files in other folders)
